--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "temp-docusaurus",
+  "name": "TIL",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,7 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy": "docusaurus deploy && gh-pages -d build",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
@@ -29,6 +29,7 @@
     "@docusaurus/types": "3.9.2",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.6.2"
   },
   "browserslist": {
@@ -45,5 +46,10 @@
   },
   "engines": {
     "node": ">=20.0"
+  },
+  "homepage": "https://byjins.github.io/TIL.github.io",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/byjins/TIL.github.io.git"
   }
 }
